--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://prudiusDenys.github.io/profilance",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "apply-middleware": "^1.0.3",
     "formik": "^2.2.5",
     "react": "^17.0.1",
@@ -23,6 +25,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.1",
+    "v1": "^1.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
